workspace/operators/v1/valuation/valuation_fcf.md
---
id: valuation_fcf
name: 自由现金流(FCF)完整估值
category: valuation
tags: [valuation, fcf, ev]
data_needed: [income, cashflow, balancesheet, daily_indicators]
outputs:
  - field: net_cash
    type: float
    desc: 净现金(亿元)
  - field: ev
    type: float
    desc: 企业价值EV(亿元)
  - field: ev_fcf_multiple
    type: float
    desc: EV/FCF倍数
  - field: turtle_rating
    type: str
    desc: 乌龟评级(五档)
  - field: fair_value_per_share
    type: float
    desc: 合理每股价值(元)
  - field: topdown_return_pct
    type: float
    desc: 穿透回报率(%)
  - field: valuation_crosscheck
    type: str
    desc: 双向验证结论(一致/需调整)
---

## 自由现金流(FCF)完整估值

### 零、金融行业估值禁区（前置门控）

**银行、保险、证券、多元金融行业禁止使用 FCF 估值。** 金融企业的经营现金流包含客户存款/保费等负债性资金流入，不代表企业造血能力，FCF 计算结果无经济意义。

```
前置检查（必须首先执行）：
├── 行业属于 银行/保险/证券/多元金融？
│   └── 是 → 停止 FCF 估值，改用以下替代方法：
│       ├── 银行：PB-ROE 估值 + 股息率 + 不良率/拨备覆盖率
│       ├── 保险：内含价值(EV)估值 + PEV 倍数
│       ├── 证券：PB 估值 + ROE 周期均值
│       └── 多元金融：PB + 股息率
│   └── 否 → 继续下方 FCF 估值流程
```

**输出要求**：若触发金融行业禁区，仍需填写所有输出字段，但 `ev_fcf_multiple` 填 0，`valuation_crosscheck` 填"不适用（金融行业）"，`turtle_rating` 填"不适用"，其余字段用替代方法得出的值填写。

### 一、FCF 计算公式

```
自由现金流(FCF) = 经营活动现金流净额 - 维持性资本支出(maintenance CAPEX)
```

**关键说明**：FCF衡量的是企业经营与投资活动产生的、可自由分配给股东的现金。它比净利润更难操纵，是估值的第一优先级指标。

### 二、FCF 计算规范化三原则

#### 原则一：股息不是开支，不得扣除

```
错误公式：FCF = 经营现金流 - CAPEX - 股息
正确公式：FCF = 经营现金流 - 维持性CAPEX

原因：
- 股息属于"筹资活动"现金流出，不是经营活动成本
- FCF衡量企业造血能力，与分配政策无关
- 100%派息率不等于公司没赚钱，是管理层分配决策
```

#### 原则二：维持性CAPEX要合理估算，不照搬账面

账面资本支出往往包含扩张性投资，需要拆分。估算方法：

| 估算方法 | 操作要点 |
|---------|---------|
| 5年历史平均法 | 取5年平均CAPEX，排除异常扩张年份 |
| 行业对比法 | 参考同行业维持性CAPEX占收入比 |
| 管理层指引法 | 业绩会中提到的资本开支计划拆分 |
| 折旧近似法 | 成熟期企业维持性CAPEX约等于折旧额 |

#### 原则三：防双标——净现金处理必须对称

```
双标错误：抵扣应付款但不加账上现金 -> 系统性低估

方案A（推荐）：只看经营性现金流能力
- 不考虑净现金，不抵扣应付款，纯粹FCF/市值估值

方案B：考虑净现金（对称处理）
- 加现金、减有息负债，计算 EV/FCF = (市值 - 净现金) / FCF
```

### 三、EV/FCF 评级标准（五档）

| EV/FCF倍数 | 评级 | 含义 | 操作建议 |
|-----------|------|------|---------|
| < 3倍 | 极品级 | 现金奶牛，严重低估 | 重仓，极限仓位 |
| 3-5倍 | 优质级 | 现金流优秀，明显低估 | 重仓建仓 |
| 5-8倍 | 显著低估 | 现金流良好，合理偏低 | 正常建仓 |
| 8-12倍 | 合理区间 | 估值合理 | 轻仓或观望 |
| > 12倍 | 高估 | 缺乏安全边际 | 排除 |

**倍数含义**：EV/FCF = N倍，意味着扣除现金后N年通过FCF收回投资。

### 四、强制FCF估值决策树

以下行业/情形**禁止仅用PE估值**，必须以FCF为主要估值依据：

```
开始估值分析
    |
步骤1：检查行业类型
    +-- 乳业/制造业/公用事业/周期性行业？-> 步骤3（强制FCF）
    +-- 其他行业 -> 步骤2
    |
步骤2：检查利润质量指标
    +-- 经营现金流/净利润 < 80%？-> 步骤3（强制FCF）
    +-- 大额非经常性损益 > 净利润20%？-> 步骤3（强制FCF）
    +-- 近期大额减值 > 净利润30%？-> 步骤3（强制FCF）
    +-- 利润质量良好 -> 可使用PE，但需FCF交叉验证
    |
步骤3：强制FCF估值
    +-- 计算所有者收益（净利润 + 折旧摊销 - 维持性CAPEX）
    +-- 计算FCF/市值比率
    +-- 计算EV/FCF倍数
    +-- 禁用PE作为最终结论依据
    |
步骤4：输出估值结论
    +-- 强制行业：仅以FCF估值为结论
    +-- 其他行业：PE + FCF双重验证
```

**强制FCF行业清单**：

| 行业类型 | 禁用PE原因 | 强制使用方法 |
|---------|-----------|------------|
| 乳业 | 大额折旧+商誉减值+库存减值扭曲利润 | FCF估值 |
| 制造业 | 重资产折旧大，利润被严重低估 | FCF/EV估值 |
| 公用事业 | 折旧大，会计利润与现金流严重背离 | DCF/股息估值 |
| 周期性行业 | 利润波动巨大，单年PE无意义 | FCF+周期位置 |
| 有商誉减值历史 | 非现金减值一次性扭曲利润 | FCF估值 |
| 高财务费用行业 | 利息支出侵蚀会计利润 | EBIT/EV估值 |

### 五、多维度估值矩阵（优先级排序）

估值结论不依赖单一指标，以下矩阵按优先级从高到低排列。**剔除净现金FCF倍数是第一优先级**，特别适用于高现金、无有息负债的央国企：

| 优先级 | 估值方法 | 适用性 | 角色 |
|--------|---------|--------|------|
| ⭐⭐⭐⭐⭐ **第一** | 剔除净现金FCF倍数 (EV/FCF) | 通用，高现金公司尤其准确 | 核心决策指标 |
| ⭐⭐⭐⭐ **第二** | FCF/市值比率 | 通用 | 交叉验证 |
| ⭐⭐⭐ **第三** | 剔除净现金PE | 无法准确估算CAPEX时的替代 | 辅助 |
| ⭐⭐ **参考** | 传统PE | 利润质量良好的行业 | 仅供参考 |
| ⭐⭐ **参考** | PB | 重资产/金融行业 | 仅供参考 |
| ⭐⭐⭐ **辅助** | 股息率 | 收息型标的 | 保底收益验证 |
| ⭐⭐⭐⭐ **验证** | 极端情景测试 | 通用 | 安全边际验证 |

**强制流程**：先算EV/FCF得出初步结论 → FCF/市值交叉验证 → 剔除净现金PE辅助参考 → 传统PE仅供对比（不作为结论依据）。

### 六、穿透回报率验证（Top-Down与Bottom-Up双向）

对估值结论做双向验证，确保Top-Down整体回报与Bottom-Up现金流拆解一致：

**Top-Down（从上至下）**：
```
计算公司整体股东回报：
├── 股息收益：年股息总额 / 市值
├── 回购收益：年回购金额 / 市值
├── 资产增值预期：留存收益投资回报率
└── 穿透回报率 = 股息 + 回购 + 合理增值预期
目标：穿透回报率 > 4%/年
```

**Bottom-Up（从下至上）**：
```
各业务板块FCF汇总 / 市值 = FCF收益率
目标：FCF/市值 > 10%
```

**验证逻辑**：

| 对比结果 | 说明 | 操作 |
|---------|------|------|
| Top-Down ≈ Bottom-Up | 估值逻辑自洽 | 正常建仓 |
| Top-Down > Bottom-Up | 可能高估了资产增值预期 | 需保守调整 |
| Top-Down < Bottom-Up | 可能低估了资产增值（或分红提升空间） | 可适度乐观 |
| 两者均低于目标 | 估值吸引力不足 | 等待更优买点 |

### 七、完整估值输出模板

```
FCF估值评估：
1. 经营现金流：[ ]亿元
2. 维持性CAPEX：[ ]亿元（估算方法：[ ]）
3. FCF = [ ]亿元（股息未扣除，已确认）
4. 市值：[ ]亿元，净现金：[ ]亿元
5. EV/FCF = [ ]倍 -> 评级：[ ]（五档）
6. FCF/市值 = [ ]% -> 交叉验证：[一致/矛盾]
7. 净现金处理：方案A/方案B，防双标检查：通过/未通过
8. 估值方法声明：[主要方法] / 排除方法及理由：[ ]
9. 穿透回报率验证：
   - Top-Down穿透回报：[ ]%（股息[ ]% + 增值预期[ ]%）
   - Bottom-Up FCF收益率：[ ]%
   - 双向验证结论：[一致/需调整]
```
